2004-02-13  Jim Garrison  <garrison@case.edu>

	* libxml++/attribute.h, libxml++/document.h, libxml++/dtd.h,
	  libxml++/io/ostreamoutputbuffer.[h|cc],
	  libxml++/io/outputbuffer.[h|cc], libxml++/keepblanks.[h|cc],
	  libxml++/nodes/node.h, libxml++/parsers/parser.h, 
	  libxml++/parsers/saxparser.h, libxml++/parsers/textreader.[h|cc]:
	Removed unnecessary semicolons

2004-02-08  Jim Garrison  <garrison@case.edu>

	* libxml++/document.[h|cc]: added Document::cobj() function

2004-02-06  Christophe de Vienne  <cdevienne@netcourrier.com>

	* libxml++/parsers/sax_parser.cc: Fixed issue #132014.

2004-02-06  Christophe de Vienne  <cdevienne@netcourrier.com>

	* libxml++/parsers/[Makefile.am|textreader.h|textreader.cc]: Added
	TextReader interface. It is almost the patch which is here :
	http://sourceforge.net/tracker/index.php?func=detail&aid=842730&group_id=12999&atid=312999
	with Glib::ustring instead of std::string, and member functions names
	changed to be consistent with other interfaces.
	* configure.in, examples/Makefile.am, examples/textreader: Added an example
	of TextReader interface.

2004-02-05  Jim Garrison  <garrison@case.edu>

	* libxml++/document.[h|cc]: added create_root_node_by_import()

2004-01-13  Christophe de Vienne  <cdevienne@alphacent.com>

	* libxml++/io/document.cc: Gives NULL strings instead of empty ones to
	xmlCreateIntSubset. Fixes issue #131329.

2004-01-12  Christophe de Vienne  <cdevienne@alphacent.com>

	* libxml++/io/outputbuffer.cc: Fix return value of xmlIO callbacks. (Fixes
	issue #131018).

2003-12-19  Murray Cumming  <murrayc@usa.net>

	* configure.in: Added glibmm-2.4 to the pkg-config check.
	* Used regexxer to do a complete std::string/Glib::ustring rename.
	Everything seems to still work. I think the parse_chunk(stream)
	stuff might need some attention/thought.

2003-12-19  Murray Cumming  <murrayc@usa.net>

	* removed acinclude.m4 because we do not need it anymore because