@@ -15,6 +15,8 @@
 #include <libxml++/exceptions/validity_error.h>
 #include <libxml++/exceptions/internal_error.h>
 
+#include <istream>
+
 #ifdef WIN32 //TODO: Why do we do this? murrayc.
 #define vsnprintf _vsnprintf
 #endif
