@@ -1,3 +1,9 @@
+2004-02-16  Christophe de VIENNE  <cdevienne@netcourrier.com>
+
+	* libxml++/nodes/node.cc, libxml++/parsers/parser.h:
+	Merged in patches from Albert Chin to get libxml++ build using the SUN,
+	HP, SGI & AIX C++ compilers.
+
 2004-02-13  Jim Garrison  <garrison@case.edu>
 
 	* libxml++/attribute.h, libxml++/document.h, libxml++/dtd.h,
